WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161558
ProxyObject's structure should not have ObjectPrototype as its prototype and it should not have special behavior for intercepting "__proto__"
https://bugs.webkit.org/show_bug.cgi?id=161558
Summary
ProxyObject's structure should not have ObjectPrototype as its prototype and ...
Saam Barati
Reported
2016-09-02 16:53:24 PDT
This will lead to cycles in the getDirectPrototype() chain.
Attachments
WIP
(18.37 KB, patch)
2016-09-02 17:51 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(18.35 KB, patch)
2016-09-06 17:40 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-09-02 17:51:28 PDT
Created
attachment 287840
[details]
WIP
Saam Barati
Comment 2
2016-09-02 17:52:04 PDT
Comment on
attachment 287840
[details]
WIP View in context:
https://bugs.webkit.org/attachment.cgi?id=287840&action=review
> JSTests/stress/proxy-dont-infinite-loop.js:18 > + +err;
I'm not getting an error here. Don't know why. I need to investigate. It's also a very weird err, and can't be accessed in any way, so I have no idea what it is.
Saam Barati
Comment 3
2016-09-06 17:40:55 PDT
Created
attachment 288073
[details]
patch
WebKit Commit Bot
Comment 4
2016-09-06 19:50:34 PDT
Comment on
attachment 288073
[details]
patch Clearing flags on attachment: 288073 Committed
r205535
: <
http://trac.webkit.org/changeset/205535
>
WebKit Commit Bot
Comment 5
2016-09-06 19:50:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug